[project]
name = "markbench"
version = "0.1.0"
requires-python = "==3.13.*"
dependencies = [
    "dxcam>=0.0.5",
    "mss>=10.1.0",
    "opencv-python>=4.13.0.92",
    "psutil>=7.2.2",
    "pyautogui>=0.9.54",
    "pydirectinput>=1.0.4",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "vgamepad>=0.1.0",
]
