[project]
name = "markbench"
version = "0.1.0"
requires-python = "==3.11.*"
dependencies = [
    "mss>=10.1.0",
    "opencv-python>=4.13.0.92",
    "psutil>=7.2.2",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "vdf>=3.4",
]

[project.optional-dependencies]
windows = [
    "dxcam>=0.0.5",
    "pydirectinput>=1.0.4",
    "pywin32>=311",
    "pyautogui>=0.9.54",
    "vgamepad>=0.1.0",
]

linux = [
    # System dependency: ydotool
    "pyautogui>=0.9.54",
]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
ignore = ["E402"]
