[project]
name = "markbench"
version = "0.1.0"
requires-python = "==3.11.*"
dependencies = [
  "dxcam>=0.0.5; sys_platform == 'win32'",
  "mss>=10.1.0",
  "opencv-python>=4.13.0.92",
  "psutil>=7.2.2",
  "pyautogui>=0.9.54; sys_platform == 'win32'",
  "pydirectinput>=1.0.4; sys_platform == 'win32'",
  "pywin32>=311; sys_platform == 'win32'",
  "pyyaml>=6.0.3",
  "requests>=2.32.5",
  "vdf>=3.4",
  "vgamepad>=0.1.0",
]

[project.optional-dependencies]
windows = []

linux = [
  # System dependencies: ydotool, ydotoold, spectacle
  # Linux virtual gamepad requires pre-provisioned /dev/uinput access.
]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
ignore = ["E402"]
